<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="channel_name">Temperature</string>
    <string name="channel_description">Temperature</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="dialog_title_humidity_notification">Humidity Notification</string>
    <string name="dialog_title_temperature_notification">Temperature Notification</string>
    <string name="dialog_message_temperature_notification">Message</string>
    <string name="dialog_message_humidity_notification">Message</string>
    <string name="connected">Connected</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="connection_not_established">Connection not Established</string>
    <string name="tiktaktoe_room_enter">tiktaktoe/room/enter</string>
    <string name="tiktaktoe_room_leave">tiktaktoe/room/leave</string>
    <string name="tiktaktoe_leave">tiktaktoe/leave</string>
    <string name="led_topic">cm/led</string>
    <string name="led_status_topic">cm/led/status</string>
    <string name="humidity_topic">cm/humidity</string>
    <string name="temperature_topic">cm/temperature</string>
    <string name="led_on">LED was Turned On</string>
    <string name="led_off">LED was Turned Off</string>
    <string name="dashboard">Menu</string>
    <string name="dashboard_sub">Sensor data</string>
    <string name="option1">Play</string>
    <string name="option2">Multiplayer</string>
    <string name="option3">Highscores</string>
    <string name="option4">Account</string>
    <string name="changes_title">Multiplayer</string>
    <string name="changes_sub">Wait to match with other player!</string>
    <string name="valores_grafico">Joguinho giro ihihih</string>
    <string name="conta">Account Settings</string>
    <string name="scores_title">HighScores</string>
    <string name="conta_nome_title">Username</string>
    <string name="reset">Reset</string>
    <string name="tiktaktoe">tiktaktoe</string>
    <string name="username">Username</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="logout">Log Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="single_player">Single Player</string>
    <string name="save_profile">Save Profile</string>
    <string name="topic_subscribed">Topic Subscribed</string>
    <string name="topic_subscribed_sbbed">You are already subscribed to this topic</string>
    <string name="topic_unsubscribed">Topic Unsubscribed</string>
    <string name="topic_unsubscribed_unsbbed">You are not subscribed to this topic</string>
</resources>