<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory
        app:key="devices_category"
        app:title="Devices">

        <SwitchPreferenceCompat
            app:key="led"
            app:title="Turn On LED"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="sensors_category"
        app:title="Sensors">

        <SwitchPreferenceCompat
            app:key="humidity"
            app:title="Enable Humidity"/>

        <SwitchPreferenceCompat
            app:key="temperature"
            app:title="Enable Temperature"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="notifications_category"
        app:title="Notifications" >

        <EditTextPreference
            app:key="humidity_notification"
            app:title="Humidity Notification"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/dialog_title_humidity_notification"
            app:dialogMessage="@string/dialog_message_humidity_notification" />

        <EditTextPreference
            app:key="temperature_notification"
            app:title="Temperature Notification"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/dialog_title_temperature_notification"
            app:dialogMessage="@string/dialog_message_temperature_notification" />

    </PreferenceCategory>

</PreferenceScreen>